// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-movable-ink's conversion destination action: all fields 1`] = `
Object {
  "anonymous_id": "PQ2QIzIjTB",
  "event_name": "Conversion",
  "metadata": Object {
    "testType": "PQ2QIzIjTB",
  },
  "order_id": "PQ2QIzIjTB",
  "products": Array [
    Object {
      "id": "PQ2QIzIjTB",
      "price": -27320916618772.48,
      "quantity": -2732091661877248,
      "title": "PQ2QIzIjTB",
      "url": "PQ2QIzIjTB",
    },
  ],
  "revenue": -27320916618772.48,
  "timestamp": "2021-02-01T00:00:00.000Z",
  "timezone": "PQ2QIzIjTB",
  "user_id": "PQ2QIzIjTB",
}
`;

exports[`Testing snapshot for actions-movable-ink's conversion destination action: required fields 1`] = `
Object {
  "anonymous_id": "PQ2QIzIjTB",
  "event_name": "Conversion",
  "metadata": Object {},
  "order_id": "PQ2QIzIjTB",
  "products": Array [
    Object {
      "id": "PQ2QIzIjTB",
    },
  ],
  "revenue": -27320916618772.48,
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "PQ2QIzIjTB",
}
`;
